--- a/management/templates/management/attendance_view.html
+++ b/management/templates/management/attendance_view.html
@@ -16,8 +16,8 @@
 					<div class="card-body" style="color: white;">
 						<div class="row">
 							<div class="col-md-4 text-center" >
-								<h5>Name : {{request.user.first_name}} {{request.user.last_name}}</h5>
-								<h5>Course : {{request.user.student.course}}</h5><br>
+								<h5>Name : {{student}} {{student.user.last_name}}</h5>
+								<h5>Course : {{student.course}}</h5><br>
 								<div class="small-box" style="color: black; border: 2px solid black; background: white; border-radius: 30px;">
 									<h5>Total Persent : {{persent}}</h5><hr>
 									<h5>Total Absent : {{absent}}</h5>
