--- a/management/templates/management/fetch_student.html
+++ b/management/templates/management/fetch_student.html
@@ -1,5 +1,6 @@
 
-<select name="students" style="width:250px" id="id_students" class="form-control">
+<select name="students" style="width:250px" id="student" class="form-control">
+	<option disabled selected hidden>Select Student</option>
 	{% for student in students %}
   		<option value="{{student.id}}">{{student}}</option>
 	{% endfor %}
