--- a/management/templates/management/forgot_password.html
+++ b/management/templates/management/forgot_password.html
@@ -5,19 +5,19 @@
 {% block content %}
 
 	<div class="container" style="">
-		<div class="" style="margin-top: 10px;">
-			<div class="card bg-dark">
+		<div class="" style="margin: 10px;">
+			<div class="card bg-dark col-md-6" style="margin: 25px; align-items: center;">
 				<div class="card-body" style="color: white;">
 					<div class="col-md-6">
 						<br>
-						<form action="" method="post" class="change-password-form" style="width: 400px;">
-							<h5 style="text-align: center">Change Password</h5><hr>
+						<form action="" method="post" class="login-form" style="width: 400px;">
+							<h5 style="text-align: center">Password Reset Confirm</h5><hr>
 							{% csrf_token %}
-								
+							<p><b>Please enter your username and set new password.</b></p>
 							{{form.as_p}}
 							<br>	
 							<div class="form-group text-center">
-								<input type="submit" name="submit" class="btn btn-primary text-center" value="submit" >
+								<input type="submit" name="submit" class="btn btn-primary text-center" value="Reset Password" >
 							</div>
 
 						</form>			
