--- a/management/templates/management/attendance_update.html
+++ b/management/templates/management/attendance_update.html
@@ -10,7 +10,6 @@
 			<div class="col-md-4">
 				{% include 'management/sidebar.html'%}
 			</div>
-			
 			<div class="col-md-8">
 				<div class="card bg-dark">
 					<div class="card-body" style="color: white;">
@@ -22,7 +21,7 @@
 									<div class="form-group">
 										Subjects:
 										<select id="subject" class="form-control" name="subjects">
-											{% for subject in teacher.subjects.all %}
+											{% for subject in subjects %}
 												{% ifequal subject.id form.subjects.value %}
 												<option value="{{subject.id}}" selected>{{subject}}</option>
 												{% else %}
@@ -35,8 +34,8 @@
 										Students:
 										<div id="student">
 											<select  class="form-control" name="students">
-												{% for student in teacher.students.all %}
-													{% ifequal student.id form.student.value %}
+												{% for student in students %}
+													{% ifequal student.id form.students.value %}
 														<option value="{{student.id}}" selected>{{student}}</option>
 													{% else %}
 														<option value="{{student.id}}">{{student}}</option>
@@ -60,7 +59,6 @@
 										<input type="submit" name="Update" class="btn btn-primary text-center" value="Update" >
 									</div>
 								</form>
-								
 							</div>
 							<div class="col-md-8">
 								<div class="text-center">
@@ -77,17 +75,3 @@
 
 {% endblock %}
 
-{% block javascript %}
-	<script>
-		$(document).on('change','#subject',function(){
-			var id=$(this).val()
-		$.ajax({
-			url:'/management/fetch-student/'+id,
-			type:'GET',
-			success:function(data){
-				$('#student').html(data)
-				}
-			});
-		});
-	</script>
-{% endblock javascript %}
