--- a/management/templates/management/signup.html
+++ b/management/templates/management/signup.html
@@ -3,9 +3,10 @@
 {% block title %} signup {% endblock %}
 {%load crispy_forms_tags %}
 {% load static%}
+
 {% block content %}
 
-	<div class="container" style="">
+	<div class="container" id="sign-up">
 		<div class="" style="margin: 10px;">
 			<div class="card bg-dark">
 				<div class="card-body" style="color: white;">
@@ -18,11 +19,12 @@
 								<li><h5>Enter a valid user name and password !</h5></li>
 								<li><h5>after create account you use username and password for login.</h5></li>
 							</ul><br>
-							<img src="{% static 'images/signup.jpg' %}" width="500px;" height="280px;" style="opacity: 0.5">		
+							<img src="{% static 'images/signup.jpg' %}">
+							
 						</div>
 						<div class="col-md-6">
 							<br>
-							<form action="" method="post" class="" style="width: 400px;">
+							<form action="" method="post" class="signup-form">
 								<h5 style="text-align: center;font-family:  cursive;"><i class="fas fa-user"></i> Sign Up</h5><hr>
 								{% csrf_token %}
 								{{form.as_p}}
