--- a/management/templates/management/update_course_registration.html
+++ b/management/templates/management/update_course_registration.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-	<div class="container-fluid" style="">
+	<div class="container" id="update-course">
 		
 		<div class="row">
 			<div class="col-md-4">
@@ -23,7 +23,7 @@
 					<div class="card-body" style="color: white;">
 						<div class="row">
 							<div class="col-md-6">
-								<form action="" method="post" class="" style="width: 400px;font-weight: bold">
+								<form action="" method="post" class="" style="font-weight: bold">
 									<h5 style="text-align: center">Update Course Registration</h5><hr>
 									{% csrf_token %}
 									<div class="form-group">
@@ -58,7 +58,7 @@
 								</form>
 							</div>
 							<div class="col-md-6 text-center">
-								<img src="{% static 'images/update.jpg' %}" alt="register" width="380" height="250" style="margin-top: 35px;">
+								<img src="{% static 'images/update.jpg' %}" alt="register">
 							</div>			
 						</div>
 					</div>	
@@ -66,17 +66,3 @@
 		</div>
 	</div>
 {% endblock %}
-{% block javascript %}
-<script>
-	$(document).on('change','#course',function(){
-		var id=$(this).val()
-		$.ajax({
-		url:'/management/fetch-subject-update/'+id,
-		type:'GET',
-		success:function(data){
-			$('#subject').html(data)
-			},
-		});
-	});
-</script>
-{% endblock javascript %}
