--- a/management/templates/management/user_profile.html
+++ b/management/templates/management/user_profile.html
@@ -1,69 +1,58 @@
 {% extends "management/base.html" %}
-
-
 {% block title %} user profile {% endblock %}
-
-
 {% block content %}
-
-
-
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-4">
 				{% include 'management/sidebar.html'%}
 			</div>
-
 			<div class="col-md-8">
 				<div class="card bg-dark">
 					<div class="card-body text-center" style="color: white">
-						{% if user.userprofile.image %}
+						{% if userprofile.image %}
 							<img src="{{user.userprofile.image.url}}" class="img-fluid rounded-circle mx-auto d-block" alt="..." style="height: 150px; width: 150px;">
 						{% endif %}
-						<h5 class="card-title">Name : {{user.first_name|capfirst}}  {{user.last_name|capfirst}}</h5><h5>Role : {{user.userprofile.role}}</h5>
+						<br>
+						<h5 class="card-title">Name : {{user.first_name|capfirst}}  {{user.last_name|capfirst}}</h5><h5>Role : {{userprofile.role}}</h5>
 						<br>
 						<div class="row g-0">
 							<div class="col-md-6">
 								<h5>Contact Detail:</h5><hr>
 								<h5>Email : {{user.email}}</h5>
-								<h5>Phone : {{user.userprofile.phone}}</h5>
+								<h5>Phone : {{userprofile.phone}}</h5>
 								<h5>User Name : {{user.username}}</h5>
+								<br>
 							</div>
+								<br>
 							<div class="col-md-6">
+
 								<h5>Address Detail :</h5><hr>	
-								<h5>Street : {{user.userprofile.street}}</h5>
-								<h5>City : {{user.userprofile.city}}</h5>
-								<h5>State : {{user.userprofile.state}}</h5>
-								<h5>Pincode : {{user.userprofile.pin_code}}</h5>	
+								<h5>Street : {{userprofile.street}}</h5>
+								<h5>City : {{userprofile.city}}</h5>
+								<h5>State : {{userprofile.state}}</h5>
+								<h5>Pincode : {{userprofile.pin_code}}</h5>	
 							</div>
-									
 						</div>
 					</div>
-
 					<div class="text-center">
-					
 						<a href="/management/user-update"><button class="btn btn-warning">Update</button></a>
-			
 						<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal">Delete</button>
-
 					</div>
 					<br>
-				
 					<div class="modal" id="myModal">
 						<div class="modal-dialog">
-					  	<div class="modal-content">
-					    	<div class="modal-header">
-					        <h4 class="modal-title">Are you sure you delete user profile?</h4>
-					        <button type="button" class="close" data-dismiss="modal">&times;</button>
-					      </div>
-					      <div class="modal-footer">
-        					<a href="/management/delete-user"><button type="button" class="btn btn-success" value="True">Confirm</button></a>
-        					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-      					</div>
+					  		<div class="modal-content">
+					    		<div class="modal-header">
+					        		<h4 class="modal-title">Are you sure you delete user profile?</h4>
+					        		<button type="button" class="close" data-dismiss="modal">&times;</button>
+					      		</div>
+					      		<div class="modal-footer">
+        							<a href="/management/delete-user"><button type="button" class="btn btn-success" value="True">Confirm</button></a>
+        							<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      							</div>
 							</div>
-  					</div>
+  						</div>
 					</div>
-					
 				</div>
 			</div>	
 		</div>	
