--- a/management/templates/management/user_feedback.html
+++ b/management/templates/management/user_feedback.html
@@ -7,7 +7,7 @@
 {% load static %}
 {% block content %}
 
-	<div class="container" id="feedback">
+	<div class="container-fluid" id="feedback">
 		<div class="row">
 			<div class="col-md-4">
 				{% include 'management/sidebar.html'%}
